<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryLighterColor"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_big"
            android:contentDescription="@string/pizza_shape_description"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/toggle_button_group"
            app:layout_constraintDimensionRatio="W, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/barrier3"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_pizza" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/round_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_shape_round" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/square_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_shape_square" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <HorizontalScrollView
            android:id="@+id/horizontal_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggle_button_group">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_min"
                app:singleLine="true" />

        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ingredients_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginTop="@dimen/space_min"
            android:layout_marginEnd="@dimen/space_big"
            app:cardCornerRadius="@dimen/space_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scrollview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/space_mid"
                android:paddingVertical="@dimen/space_min">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="338dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lobster_regular"
                    android:paddingHorizontal="@dimen/space_min"
                    android:paddingVertical="@dimen/space_min"
                    android:text="@string/ingredients"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/pepperoni_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_mid"
                    android:buttonTint="@color/secondaryColor"
                    android:text="@string/pepperoni"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/mushrooms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_mid"
                    android:buttonTint="@color/secondaryColor"
                    android:text="@string/mushrooms"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pepperoni_checkbox"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/veggies_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_mid"
                    android:buttonTint="@color/secondaryColor"
                    android:text="@string/veggies"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mushrooms_checkbox"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/anchovies_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_mid"
                    android:buttonTint="@color/secondaryColor"
                    android:text="@string/anchovies"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/veggies_checkbox"
                    app:useMaterialThemeColors="false" />

                <RadioGroup
                    android:id="@+id/cheese_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    app:layout_constraintStart_toEndOf="@+id/mushrooms_checkbox"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/default_selection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryColor"
                        android:text="@string/no_cheese"
                        android:checked="true"/>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryColor"
                        android:text="@string/cheese" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/secondaryColor"
                        android:text="@string/two_times_cheese" />
                </RadioGroup>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="pepperoni_checkbox,mushrooms_checkbox,veggies_checkbox,anchovies_checkbox"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginTop="@dimen/space_min"
            android:layout_marginEnd="@dimen/space_big"
            app:cardCornerRadius="@dimen/space_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/space_mid"
                android:paddingVertical="@dimen/space_mid">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/TextInputLayout"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_24px"
                        android:drawablePadding="@dimen/space_mid"
                        android:drawableTint="@color/secondaryColor"
                        android:hint="@string/name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_call_24px"
                        android:drawablePadding="@dimen/space_mid"
                        android:drawableTint="@color/secondaryColor"
                        android:hint="@string/phone"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/place_order_button"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_min"
            android:text="@string/place_order"
            app:layout_constraintEnd_toEndOf="@+id/contact_layout"
            app:layout_constraintStart_toStartOf="@+id/contact_layout"
            app:layout_constraintTop_toBottomOf="@+id/contact_layout" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="toggle_button_group" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="toggle_button_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>